# Gaze

./: .gitignore  .gitmodules  README.md
Android_app/: settings.gradle
detector_training/: CMakeLists.txt  Makefile  object_detector.svm
detector_training/detector/: L.svm  bouteille-flip.svm  bouteille.svm  choufleur.svm  escalier.svm  pentagone.svm  pentagone3.svm  rond.svm  triangle.svm  triangle_160x160.svm  triangle_80x80.svm  tripik.svm
detector_training/dlib/: Makefile  cmake_install.cmake  config.h  dlib-1.pc
detector_training/dlib/config/: dlibConfig.cmake
detector_training/include/dlib/: config.h
detector_training/lib/cmake/dlib/: dlib.cmake
detector_training/samples/3ronds/: training.xml
detector_training/samples/3ronds/testing/: testing.xml
detector_training/samples/L/: training.xml
detector_training/samples/L/testing/: testing.xml
detector_training/samples/bouteille/: training.xml
detector_training/samples/bouteille/testing/: testing.xml
detector_training/samples/carre/: training.xml
detector_training/samples/carre/testing/: testing.xml
detector_training/samples/choufleur/: training.xml
detector_training/samples/choufleur/testing/: testing.xml
detector_training/samples/escalier/: training.xml
detector_training/samples/escalier/testing/: testing.xml
detector_training/samples/etoile/: training.xml
detector_training/samples/etoile/testing/: testing.xml
detector_training/samples/id/: training.xml
detector_training/samples/lajesaispas/: training.xml
detector_training/samples/lajesaispas/testing/: testing.xml
detector_training/samples/nuage/: training.xml
detector_training/samples/nuage/testing/: testing.xml
detector_training/samples/nuage2/: training.xml
detector_training/samples/nuage2/testing/: testing.xml
detector_training/samples/pentagone/: pentagone.xml  testing.xml  training.xml
detector_training/samples/pentagone/testing/: testing.xml
detector_training/samples/quille/: training.xml
detector_training/samples/quille/testing/: testing.xml
detector_training/samples/rond/: training.xml
detector_training/samples/rond/testing/: testing.xml
detector_training/samples/sablier/: training.xml
detector_training/samples/sablier/testing/: testing.xml
detector_training/samples/sablier2/: training.xml
detector_training/samples/sablier2/testing/: testing.xml
detector_training/samples/trefle/: training.xml
detector_training/samples/trefle/testing/: testing.xml
detector_training/samples/triangle/: testing.xml  training.xml
detector_training/samples/triangle/testing/: testing.xml
detector_training/samples/tripentagone/: training.xml
detector_training/samples/tripik/: training.xml
detector_training/saved_images/: 1.txt
detector_training/src/: batch.sh  batch_resize.sh  client.cpp  deep_trainer.cpp  detection_server.cpp  network_definition.h  presence_advertiser.hpp  server.hpp  trainer++.cpp  udp_broadcaster.hpp
(+287 files in other folders)
